# crud_task

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: db.sqlite3
src/src/: settings.py  urls.py
src/users/: models.py  permissions.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_customuser_email.py
